Regression: Face Set visibility is reset after saving #100482

Closed
opened 2022-08-18 17:19:50 +02:00 by Julien Kaspar · 7 comments
Member

System Information
Operating system: Linux-5.15.0-46-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.85.02

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-08-18 05:55, hash: 0aaff9a07d
Worked: 3.4.0 Alpha, branch: master, commit date: 2022-08-11 06:48, hash: aa0ca3aefa

Short description of error
When saving the file and updating the viewport by for example navigating, any hidden face sets in sculpt mode will become visible again.
This is best reproduces when saving a new file. When loading an existing file while not having done edits to the face sets, it will work as expected.

Exact steps for others to reproduce the error

  • Enter sculpt mode
  • Use the Draw Face Sets brush to create new face sets on each face of the default cube
  • Save the new file somewhere
  • Hide face sets by pointing at one of them and pressing H
  • Save with Ctrl S
  • Rotate the viewport
**System Information** Operating system: Linux-5.15.0-46-generic-x86_64-with-glibc2.35 64 Bits Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.85.02 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-08-18 05:55, hash: 0aaff9a07d Worked: 3.4.0 Alpha, branch: master, commit date: 2022-08-11 06:48, hash: `aa0ca3aefa` **Short description of error** When saving the file and updating the viewport by for example navigating, any hidden face sets in sculpt mode will become visible again. This is best reproduces when saving a new file. When loading an existing file while not having done edits to the face sets, it will work as expected. **Exact steps for others to reproduce the error** - Enter sculpt mode - Use the Draw Face Sets brush to create new face sets on each face of the default cube - Save the new file somewhere - Hide face sets by pointing at one of them and pressing `H` - Save with `Ctrl S` - Rotate the viewport
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscribers: @HooglyBoogly, @PratikPB2123

Added subscribers: @HooglyBoogly, @PratikPB2123
Member

I suspect 2480b55f21 has introduced this issue.
@HooglyBoogly ^

I suspect 2480b55f21 has introduced this issue. @HooglyBoogly ^
Pratik Borhade changed title from Face Set visibility is reset after saving to Regression: Face Set visibility is reset after saving 2022-08-19 07:34:50 +02:00
Hans Goudey self-assigned this 2022-08-19 14:44:34 +02:00

This issue was referenced by 35c601269b

This issue was referenced by 35c601269b7c6920f8646ed743130065b93786b4
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Thanks for the report!

Thanks for the report!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100482
No description provided.