Fix T100482: Face Set visibility reset after saving

The face hide attribute wasn't created in order to store the visiblity
from the face sets, it was only updated if it already existed.